[package]
name = "pkll"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/yofabr/pkll"
description = "A short description of your tool"
license = "MIT"
homepage = "https://github.com/yofabr/pkll"
readme = "README.md"
keywords = ["port", "process", "cli"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dist = "0.0.0"
listeners = "0.5"
sysinfo = "0.32"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "pkll"
path = "src/main.rs"
