[package]
name = "pkll"
version = "0.1.1"
edition = "2024"
authors = ["Yoftahe <jofab08@gmail.com>"]
repository = "https://github.com/yofabr/pkll"
description = "A CLI tool to find and kill processes running on a specific port"
license = "MIT"
homepage = "https://github.com/yofabr/pkll"
readme = "README.md"
keywords = ["port", "process", "cli", "kill", "network"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
cargo-dist = "0.31.0"
listeners = "0.5"
sysinfo = "0.32"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "pkll"
path = "src/main.rs"
